@@ -18,6 +18,9 @@ hzDistinctnessCodeToOffset <- function(x, codes=c('A','C','G','D'), offset=c(0.5
 ## basic function
 plotSPC <- function(x, color='soil_color', width=0.2, name='name', cex.names=0.5, cex.depth.axis=cex.names, cex.id=cex.names+(0.2*cex.names), print.id=TRUE, id.style='auto', plot.order=1:length(x), add=FALSE, scaling.factor=1, y.offset=0, n=length(x), max.depth=max(x), n.depth.ticks=5, shrink=FALSE, shrink.cutoff=3, abbr=FALSE, abbr.cutoff=5, divide.hz=TRUE, hz.distinctness.offset=NULL, hz.distinctness.offset.col='black', hz.distinctness.offset.lty=2, ...) {
   
+	# save old par settings
+	op <- par('mar')
+	
   # get horizons
   h <- horizons(x)
   
@@ -162,6 +165,8 @@ plotSPC <- function(x, color='soil_color', width=0.2, name='name', cex.names=0.5
   depth_axis_labels <- paste(depth_axis_intervals, depth_units(x))
   axis(side=4, line=-2.5, las=2, at=depth_axis_tick_locations, labels=depth_axis_labels, cex.axis=cex.depth.axis)
   
+	# restore old par settings
+	par('mar' = op)
   }
 
 
